// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maps state and dispatch to props 1`] = `
Object {
  "polozky": Array [
    Object {
      "castka": 250,
      "duvod": "předem",
    },
    Object {
      "castka": 20,
      "duvod": "záloha",
    },
  ],
  "suma": 270,
}
`;

exports[`maps state and dispatch to props 2`] = `
Object {
  "platby": Array [
    Object {
      "castka": 250,
      "datum": "1. 5. 2020",
      "onRemove": [Function],
      "poznamka": "stále visí",
      "typ": "převodem",
    },
    Object {
      "castka": 20,
      "datum": "6. 6. 2020",
      "onRemove": [Function],
      "typ": "hotově",
    },
  ],
  "suma": 270,
}
`;

exports[`nastav novaPlatbaMinified pokud provedeno < předepsáno 1`] = `
Object {
  "polozky": Array [
    Object {
      "castka": 250,
      "duvod": "předem",
    },
    Object {
      "castka": 20,
      "duvod": "záloha",
    },
  ],
  "suma": 270,
}
`;

exports[`nastav novaPlatbaMinified pokud provedeno < předepsáno 2`] = `
Object {
  "platby": Array [
    Object {
      "castka": 250,
      "datum": "1. 5. 2020",
      "onRemove": [Function],
      "poznamka": "stále visí",
      "typ": "převodem",
    },
  ],
  "suma": 250,
}
`;

exports[`prihlasky - předepsané startovné předem 1`] = `
Object {
  "polozky": Array [
    Object {
      "castka": 350,
      "duvod": "na místě (žádná platba)",
    },
    Object {
      "castka": 20,
      "duvod": "záloha",
    },
  ],
  "suma": 370,
}
`;

exports[`prihlasky - předepsané startovné předem 2`] = `
Object {
  "platby": Array [],
  "suma": 0,
}
`;
